--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/server/node_modules
 /.pnp
 .pnp.js
 
@@ -17,6 +18,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env.development*
+.env.production*
 
 npm-debug.log*
 yarn-debug.log*
