--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.8",
+    "@types/mongoose": "^5.7.36",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.10.6"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
