--- a/server/package.json
+++ b/server/package.json
@@ -5,20 +5,24 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-server": "set NODE_ENV=development&& nodemon server.ts"
+    "dev-server": "set NODE_ENV=development&& nodemon server.ts",
+    "newman": "node_modules/.bin/newman run"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.7.36",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.6"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
+    "newman": "^5.2.0",
     "nodemon": "^2.0.4",
     "npx": "^10.2.2",
     "ts-node": "^9.0.0",
