--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "OffCmpus",
+  "name": "Student OffCampus Housing Finder",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,14 +8,21 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "favicon144.png",
       "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
+      "sizes": "144x144"
+    },{
+      "src": "favicon150.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "150x150"
+    },{
+      "src": "favicon152.png",
+      "type": "image/png",
+      "sizes": "152x152"
+    },{
+      "src": "favicon310.png",
+      "type": "image/png",
+      "sizes": "310x310"
     }
   ],
   "start_url": ".",
