--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-icons": "^3.0.0",
     "framer-motion": "^2.7.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-scripts": "3.4.3",
     "typescript": "^4.0.3"
   },
