--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-server": "NODE_ENV=development npx nodemon server.ts",
+    "server": "nodemon server.ts",
+    "dev-server": "cross-env NODE_ENV=development npm run server",
     "newman": "node_modules/.bin/newman run"
   },
   "keywords": [],
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
+    "cross-env": "^7.0.2",
     "newman": "^5.2.0",
     "nodemon": "^2.0.4",
     "npx": "^10.2.2",
