--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/lodash": "^4.14.161",
     "@types/mongoose": "^5.7.36",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
