--- a/web/package.json
+++ b/web/package.json
@@ -7,21 +7,25 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/axios": "^0.14.0",
+    "@types/chart.js": "^2.9.25",
     "@types/jest": "^26.0.14",
     "@types/lodash": "^4.14.161",
     "@types/node": "^14.11.2",
     "@types/query-string": "^6.3.0",
     "@types/react": "^16.9.49",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^16.9.8",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-transition-group": "^4.4.0",
     "axios": "^0.20.0",
+    "chart.js": "^2.9.3",
     "framer-motion": "^2.7.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "query-string": "^6.13.5",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
