--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/axios": "^0.14.0",
     "@types/chart.js": "^2.9.25",
+    "@types/chartjs-plugin-annotation": "^0.5.1",
     "@types/jest": "^26.0.14",
     "@types/lodash": "^4.14.161",
     "@types/node": "^14.11.2",
@@ -20,6 +21,8 @@
     "@types/react-transition-group": "^4.4.0",
     "axios": "^0.20.0",
     "chart.js": "^2.9.3",
+    "chartjs-plugin-annotation": "^0.5.7",
+    "chartjs-plugin-draggable": "^0.1.6",
     "framer-motion": "^2.7.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
