--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "server": "nodemon server.ts",
     "dev-server": "cross-env NODE_ENV=development npm run server",
     "newman": "node_modules/.bin/newman run",
-    "gen-test-data": "cd test_data && npx tsc seed.ts && node -e \"require('./seed.js').writeData();\""
+    "gen-test-data": "npx tsc && node -e \"require('./build/test_data/seed.js').writeData({directory:'../../test_data'});\""
   },
   "keywords": [],
   "author": "",
