--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon server.ts",
+    "server": "nodemon --ignore '*.spec.*' server.ts",
     "dev-server": "cross-env NODE_ENV=development npm run server",
     "newman": "node_modules/.bin/newman run",
-    "gen-test-data": "npx tsc && node -e \"require('./build/test_data/seed.js').writeData({directory:'../../test_data'});\""
+    "gen-test-data": "tsc && node -e \"require('./build/test_data/seed.js').writeData({directory:'../../test_data'});\"",
+    "test": "cross-env NODE_ENV=test mocha --file API/mocha_globals.ts -r ts-node/register API/**/*.spec.ts"
   },
   "keywords": [],
   "author": "",
@@ -26,10 +27,15 @@
     "mongoose": "^5.10.6"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.14",
     "@types/faker": "^5.1.2",
+    "@types/mocha": "^8.0.3",
     "@types/node": "^14.11.2",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cross-env": "^7.0.2",
     "faker": "^5.1.0",
+    "mocha": "^8.2.0",
     "newman": "^5.2.0",
     "nodemon": "^2.0.4",
     "npx": "^10.2.2",
