--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,11 @@ build
 .DS_Store
 .env.local
 .env.development.local
-.env.test.local
 .env.production.local
+.env.test.local
 .env.development*
 .env.production*
+.env.test*
 .env
 docker.bat
 
