--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
         working-directory: server
+      - name: Seed housing-database
+        run: bash reload_db.sh
+        working-directory: server/test_data
       - name: Run tests
         run: npm test
         env:
