--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm ci
         working-directory: server
       - name: Seed housing-database
-        run: bash reload_db.sh
+        run: bash reload_db.sh mongodb+srv://test:test@mongo:${{ job.services.mongo.ports[27017] }}/housing-database
         working-directory: server/test_data
       - name: Run tests
         run: npm test
