--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm ci
         working-directory: server
       - name: Seed housing-database
-        run: bash reload_db.sh mongodb+srv://test:test@mongo:${{ job.services.mongo.ports[27017] }}/housing-database
+        run: bash reload_db.sh mongodb://test:test@mongo:${{ job.services.mongo.ports[27017] }}/housing-database
         working-directory: server/test_data
       - name: Run tests
         run: npm test
@@ -40,5 +40,6 @@ jobs:
           MONGO_DB_PASSWORD: test
           MONGO_DB_HOST: mongo
           MONGO_DB_PORT: ${{ job.services.mongo.ports[27017] }}
+          MONGO_DB_PREFIX: mongodb
           SERVER_PORT: 3000
         working-directory: server
