--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "dev-server": "cross-env NODE_ENV=development npm run server",
     "newman": "node_modules/.bin/newman run",
     "gen-test-data": "tsc && node -e \"require('./build/test_data/seed.js').writeData({directory:'../../test_data'});\"",
-    "test": "cross-env NODE_ENV=test mocha --file API/mocha_globals.ts -r ts-node/register API/**/*.spec.ts"
+    "test": "cross-env NODE_ENV=test mocha --file API/mocha_globals.ts -r ts-node/register API/**/*.spec.ts",
+    "tdd-server": "nodemon -e ts,json --exec \"npm test || true\""
   },
   "keywords": [],
   "author": "",
