--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: "12"
       - uses: actions/cache@v2
         with:
-          path: server/node_modules
+          path: ~/.npm
           key: ci-server-${{ runner.os }}-${{ hashFiles('server/package-lock.json') }}
       - name: Install dependencies
         run: npm ci
@@ -49,7 +49,7 @@ jobs:
           node-version: "12"
       - uses: actions/cache@v2
         with:
-          path: server/node_modules
+          path: ~/.npm
           key: ci-server-${{ runner.os }}-${{ hashFiles('server/package-lock.json') }}
       - name: Install dependencies
         run: npm ci
