--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
-    "mongoose": "^5.10.6"
+    "mongoose": "^5.10.6",
+    "passport": "^0.4.1",
+    "passport-cas": "^0.1.1"
   },
   "devDependencies": {
     "@types/faker": "^5.1.2",
