--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.8",
     "@types/lodash": "^4.14.161",
     "@types/mongoose": "^5.7.36",
+    "@types/passport": "^1.0.4",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
