--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
+    "@types/express-session": "^1.17.0",
     "@types/lodash": "^4.14.161",
     "@types/mongoose": "^5.7.36",
     "@types/passport": "^1.0.4",
@@ -23,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.6",
     "passport": "^0.4.1",
