--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
@@ -24,6 +25,7 @@
     "@types/mongoose": "^5.7.36",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
