--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "node-uuid": ">=1.4.4",
     "ssri": ">=5.2.2",
     "hoek": ">=4.2.1",
     "cryptiles": ">=4.1.2",
