--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-uuid": ">=1.4.4",
-    "ssri": ">=5.2.2",
-    "hoek": ">=4.2.1",
-    "cryptiles": ">=4.1.2",
+    "@sendgrid/mail": "^7.4.0",
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.8",
@@ -32,14 +29,18 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cryptiles": ">=4.1.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "hoek": ">=4.2.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.6",
+    "node-uuid": ">=1.4.4",
     "passport": "^0.4.1",
     "passport-cas": "^0.1.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "ssri": ">=5.2.2"
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
