--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,8 @@
     "chart.js": "^2.9.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "chartjs-plugin-draggable": "^0.1.6",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "framer-motion": "^2.7.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
@@ -39,10 +41,11 @@
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "urlencode": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "dotenv -e ../.env.development react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -61,5 +64,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv-cli": "^4.0.0"
   }
 }
