--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "@types/mongoose": "^5.7.36",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
+    "apollo-server": "^2.19.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -40,7 +41,10 @@
     "passport": "^0.4.1",
     "passport-cas": "^0.1.1",
     "passport-local": "^1.0.0",
-    "ssri": ">=5.2.2"
+    "reflect-metadata": "^0.1.13",
+    "ssri": ">=5.2.2",
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.29"
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
