--- a/server/package.json
+++ b/server/package.json
@@ -17,18 +17,21 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.4.0",
+    "@typegoose/typegoose": "^7.4.2",
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/express-session": "^1.17.0",
+    "@types/graphql": "^14.5.0",
     "@types/lodash": "^4.14.161",
     "@types/mongoose": "^5.7.36",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
-    "apollo-server": "^2.19.0",
+    "apollo-server-express": "^2.19.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "class-validator": "^0.12.2",
     "cors": "^2.8.5",
     "cryptiles": ">=4.1.2",
     "dotenv": "^8.2.0",
@@ -43,8 +46,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "ssri": ">=5.2.2",
-    "type-graphql": "^1.1.1",
-    "typeorm": "^0.2.29"
+    "type-graphql": "^1.1.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
