--- a/server/package.json
+++ b/server/package.json
@@ -17,36 +17,43 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.4.0",
+    "@typegoose/typegoose": "^7.4.2",
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.8",
-    "@types/express": "^4.17.8",
     "@types/express-session": "^1.17.0",
     "@types/lodash": "^4.14.161",
-    "@types/mongoose": "^5.7.36",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
+    "apollo-server-express": "^2.19.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "class-validator": "^0.12.2",
     "cors": "^2.8.5",
     "cryptiles": ">=4.1.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "graphql": "^15.4.0",
     "hoek": ">=4.2.1",
     "lodash": "^4.17.20",
-    "mongoose": "^5.10.6",
+    "mongoose": "^5.10.14",
     "node-uuid": ">=1.4.4",
     "passport": "^0.4.1",
     "passport-cas": "^0.1.1",
     "passport-local": "^1.0.0",
-    "ssri": ">=5.2.2"
+    "reflect-metadata": "^0.1.13",
+    "ssri": ">=5.2.2",
+    "type-graphql": "^1.1.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
+    "@types/express": "^4.17.9",
     "@types/faker": "^5.1.2",
+    "@types/graphql": "^14.5.0",
     "@types/mocha": "^8.0.3",
-    "@types/node": "^14.11.2",
+    "@types/mongoose": "^5.10.0",
+    "@types/node": "^14.14.7",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "cross-env": "^7.0.2",
@@ -56,6 +63,6 @@
     "nodemon": "^2.0.4",
     "npx": "^10.2.2",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.5"
   }
 }
