--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.4.0",
     "@typegoose/typegoose": "^7.4.2",
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.8",
@@ -26,9 +27,11 @@
     "@types/graphql": "^14.5.0",
     "@types/lodash": "^4.14.161",
     "@types/mongoose": "^5.7.36",
+    "@types/multer": "^1.4.4",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
     "apollo-server-express": "^2.19.0",
+    "aws-sdk": "^2.792.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "class-validator": "^0.12.2",
@@ -40,6 +43,7 @@
     "hoek": ">=4.2.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.6",
+    "multer": "^1.4.2",
     "node-uuid": ">=1.4.4",
     "passport": "^0.4.1",
     "passport-cas": "^0.1.1",
