--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "aws-sdk": "^2.792.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "buffer-image-size": "^0.6.4",
     "class-validator": "^0.12.2",
     "cors": "^2.8.5",
     "cryptiles": ">=4.1.2",
@@ -49,6 +50,7 @@
     "passport-cas": "^0.1.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
+    "resize-image-buffer": "^1.0.0",
     "ssri": ">=5.2.2",
     "type-graphql": "^1.1.1"
   },
