--- a/web/package.json
+++ b/web/package.json
@@ -51,6 +51,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.0.3",
+    "universal-cookie": "^4.0.4",
     "urlencode": "^1.1.0"
   },
   "scripts": {
