--- a/server/package.json
+++ b/server/package.json
@@ -52,7 +52,8 @@
     "reflect-metadata": "^0.1.13",
     "resize-image-buffer": "^1.0.0",
     "ssri": ">=5.2.2",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "usps-webtools": "^1.0.3"
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
