--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@types/jest": "^26.0.14",
     "@types/lodash": "^4.14.161",
     "@types/node": "^14.11.2",
+    "@types/ol": "^6.4.2",
     "@types/query-string": "^6.3.0",
     "@types/react": "^16.9.49",
     "@types/react-chartjs-2": "^2.5.7",
@@ -35,14 +36,17 @@
     "dotenv": "^8.2.0",
     "framer-motion": "^2.7.1",
     "graphql": "^15.4.0",
+    "leaflet": "^1.7.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
+    "ol": "^6.4.3",
     "query-string": "^6.13.5",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-leaflet": "^3.0.2",
     "react-redux": "^7.2.2",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
@@ -81,6 +85,7 @@
     "@graphql-codegen/cli": "^1.19.1",
     "@graphql-codegen/fragment-matcher": "^2.0.0",
     "@graphql-codegen/typescript-react-apollo": "^2.1.1",
+    "@types/leaflet": "^1.5.19",
     "dotenv-cli": "^4.0.0"
   }
 }
