--- a/web/package.json
+++ b/web/package.json
@@ -86,6 +86,7 @@
     "@graphql-codegen/fragment-matcher": "^2.0.0",
     "@graphql-codegen/typescript-react-apollo": "^2.1.1",
     "@types/leaflet": "^1.5.19",
+    "@types/urlencode": "^1.1.2",
     "dotenv-cli": "^4.0.0"
   }
 }
