--- a/server/package.json
+++ b/server/package.json
@@ -57,7 +57,8 @@
     "ssri": ">=5.2.2",
     "twilio": "^3.53.0",
     "type-graphql": "^1.1.1",
-    "usps-webtools": "^1.0.3"
+    "usps-webtools": "^1.0.3",
+    "web-push": "^3.4.4"
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
