--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "@types/multer": "^1.4.4",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
+    "@types/web-push": "^3.3.0",
     "apollo-server-express": "^2.19.0",
     "aws-sdk": "^2.792.0",
     "bcrypt": "^5.0.0",
